--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Wallet is an intuitive and secure web app empowering users to manage finances, track expenses, budget effectively, and achieve financial goals."
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/VSRudnyk/wallet_frontend/raw/main/src/images/screenshot.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
